--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,34 @@
-.nav {
+
+
+.nav--bar {
+    display: flex;
     align-items: center;
+    justify-content: space-between;
+    background-color: #21222A;
+    height: 91px;
+}
+
+.nav--title {
+    display: flex;
+    align-items: center;
+    padding-left: 26px;
+}
+
+.nav--name {
+    color: #61DAFB;
+    font-size: 28px;
+    font-weight: 800;
+    font-family: Inter;
 }
 
 .nav--icon {
     height: 28px;
+    padding-right: 8px;
+}
+
+.nav--heading {
+    color: #DEEBF8;
+    font-size: 21px;
+    font-weight: 600px;
+    padding-right: 26px;
 }
